Switch font to 'Public Sans'

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -6,12 +6,12 @@
 <link
   rel="preload"
   as="style"
-  href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=PT+Serif:wght@400;700&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600;700&display=swap"
 />
 
 <link
   rel="stylesheet"
-  href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=PT+Serif:wght@400;700&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600;700&display=swap"
   media="print"
   onload="this.media='all'"
 />
@@ -19,7 +19,7 @@
 <noscript>
   <link
     rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=PT+Serif:wght@400;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600;700&family=Lora:wght@400;500;600;700&display=swap"
   />
 </noscript>
 {% endblock %}
